# pedestal-rs

./: Cargo.toml  readme.md
.github/workflows/: test.yml
examples/cv/: Cargo.toml
examples/cv/src/: main.rs
src/: cv_mat.rs  lib.rs  mini_bmp.rs
src/collection/: circular_vec.rs  mod.rs  vec.rs
src/ext/: mod.rs  mutation_ext.rs
src/fs/: mod.rs  path.rs
src/tokio_proc/: mod.rs
