[package]
name = "pedestal-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# tokio = { version = "1", optional = true }

[dev-dependencies]
futures = "0.3"

[features]
fs = []
collection = []
mutation = []
async = []