[package]
name = "pedestal-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", default-features = false, optional = true }
nix = { version = "0.26", optional = true }

[dev-dependencies]
futures = "0.3"
tokio = { version = "1", features = ["rt-multi-thread", "io-util"] }

[features]
fs = []
collection = []
mutation = []
async = []
tokio-proc = ["tokio/process", "tokio/fs", "tokio/rt-multi-thread", "nix"]